Fixed software overflow

--- a/src/components/software/software.css
+++ b/src/components/software/software.css
@@ -1,4 +1,33 @@
 
+.software-list > .row {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+/** Software list scrollbar **/
+/* width */
+div.software-list ::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+div.software-list ::-webkit-scrollbar-track {
+    background: #d6d6d6 ;
+    border-radius: 10px;
+}
+
+/* Handle */
+div.software-list ::-webkit-scrollbar-thumb {
+    background-color: #d58e51 ;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+div.software-list ::-webkit-scrollbar-thumb:hover {
+    background-color: #dfaa7c;
+}
+
+/** Software list cards **/
 .software-card-body {
     padding: 1rem;
 }
